Fixed Alignment for the devteam section

--- a/iwd-app/src/components/devTeam-section/devTeam.css
+++ b/iwd-app/src/components/devTeam-section/devTeam.css
@@ -24,11 +24,17 @@
 
 @media only screen and (max-width:1400px){
     .devTeam-cards-container{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media only screen and (max-width:1100px){
+    .devTeam-cards-container{
         grid-template-columns: 1fr 1fr;
     }
 }
 
-@media only screen and (max-width:850px){
+@media only screen and (max-width:750px){
     .devTeam-cards-container{
         grid-template-columns: 1fr;
     }
